musicapp-helm/ingress/devops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: devops.local.musicapp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: musicapp-backend
                port:
                  number: 8080
